Implement product management features with CRUD operations, DTOs, and validation; update category references and enhance data handling